feat(TAP-9242): The maximum query range days for a single log